# lite-raft

./: .gitignore  Cargo.toml  README.md  build.rs  storage.rs
core/: Cargo.toml
core/src/: errors.rs  raft_log.rs  storage.rs
docs/: design.md  design.zh-cn.md
examples/kv/: Cargo.toml  build.rs
examples/kv/proto/: kv.proto
examples/kv/scripts/: start_server.sh
examples/kv/src/: args.rs  cli.rs  client.rs  common.rs  main.rs  server.rs  state_machine.rs  storage.rs  transport.rs
oceanraft/: Cargo.toml  build.rs
oceanraft/harness/: Cargo.toml
oceanraft/harness/src/: fixture.rs  lib.rs  transport.rs
oceanraft/harness/tests/: main.rs  t10_multiraft.rs  t10_multiraft_elect.rs  t20_multiraft_command.rs  t30_membership.rs  utils.rs
oceanraft/proto/: eraftpb.proto  multiraftpb.proto  storepb.proto
oceanraft/src/: apply.rs  channel.rs  config.rs  error.rs  group.rs  lib.rs  log.rs  msg.rs  multiraft.rs  multiraft_handle.rs  node.rs  node_handle.rs  node_heartbeats.rs  proposal.rs  rsm.rs  rsm_event.rs  state.rs  task_group.rs  tick.rs  utils.rs
oceanraft/src/apply/: actor.rs  delegate.rs  mod.rs
oceanraft/src/memstore/: mem.rs  mod.rs
oceanraft/src/multiraft/: apply.rs  apply_actor.rs  config.rs  error.rs  event.rs  group.rs  memory.rs  mod copy.rs  mod.rs  msg.rs  multiraft.rs  multiraft_actor.rs  multiraft_message.rs  node.rs  proposal.rs  raft_group.rs  replica_cache.rs  response.rs  rsm.rs  state.rs  storage.rs  transport.rs  transport_local.rs  types.rs  util.rs
oceanraft/src/multiraft/storage/: mem.rs  mod.rs  rocks.rs
oceanraft/src/multiraft/transport/: local.rs  mod.rs
oceanraft/src/node/: actor.rs  conf_change.rs  confchange.rs  group.rs  handle_msg.rs  handle_ready.rs  handler.rs  heartbeats.rs  manager.rs  mod.rs  node.rs
oceanraft/src/storage/: mem.rs  mod.rs  rocks.rs
oceanraft/src/transport/: grpc.rs  local.rs  mod.rs
oceanraft/src/util/: macros.rs  mod.rs  task_group.rs
oceanraft/tests/: t10_multiraft.rs
oceanraft/tests/command/: main.rs  t10_bad_write.rs  t10_multiraft_command.rs  t20_basic_write.rs  t30_stale_write.rs  t40_read_index.rs  t50_storage_failure.rs  t60_apply_failure.rs
oceanraft/tests/elect/: main.rs  t10_multiraft_elect.rs
oceanraft/tests/fixtures/: builder.rs  checker.rs  cluster.rs  mod.rs  port.rs  rsm.rs  tracing_log.rs  transport.rs
oceanraft/tests/membership/: main.rs  t10_membership.rs
proto/: Cargo.toml  apppb.proto  build.rs  eraftpb.proto  errorpb.proto  multiraftpb.proto
proto/proto/: apppb.proto  multiraftpb.proto
proto/src/: lib.rs
src/: lib.rs  proto.rs  rsm.rs
src/multiraft/: apply.rs  apply_command.rs  config.rs  error.rs  event.rs  mod.rs  multiraft.rs  multiraft_actor.rs  multiraft_message.rs  node.rs  proposal.rs  raft_group.rs  raft_propose.rs  raft_ready.rs  replica_cache.rs  transport.rs  transport_local.rs  write.rs
src/storage/: memory.rs  mod.rs  rocksdb.rs  storage.rs
tests/: t10_multiraft.rs
