[package]
name = "oceanraft"
version = "0.1.0"
edition = "2021"

[dependencies]
# raft-proto = { version = "0.7.0", default-features = false, features = ["prost-codec"] }
#raft = { version = "0.7.0", default-features = false, features=["default-logger", "prost-codec"]}
raft-proto = { path = "../../raft-rs/proto", version = "0.7.0", default-features = false, features = ["prost-codec"] }
raft = { path = "../../raft-rs", version = "0.7.0", default-features = false, features=["default-logger", "prost-codec"]}
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
slog = { version = "2.2", features = ["max_level_debug"] }
uuid = { version = "1", features = ["v4"] }
lazy_static = { version = "1" }
bincode = { version = "1" }
# signal-hook-tokio = { version = "0.3" }
serde_json = { version = "1" }
slog-term = "2"
slog-async = "2"
thiserror = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
console-subscriber = {version = "0.1"}
bytes = { version = "1" }
prost = { version = "0.11" }
smallvec = { version = "1" }
tonic = { version = "0.9.1", optional = true }
flume = { version = "0.10.14" }
protobuf = {version = "2" }
rocksdb = {version = "0.20", optional = true }
flexbuffers = { version = "2.0.0" }


[dev-dependencies]
protobuf = "2"
opentelemetry = "0.18"
tracing-opentelemetry = "0.18" 
tracing-appender = "0.2"
opentelemetry-jaeger = "0.17"
lazy_static = { version = "1" }
async-entry = { version = "0.3" }
rand = { version = "0.8.4" }
tempdir = { version = "0.3" }

[build-dependencies]
prost-build = { version = "0.11" }
tonic-build = { version = "0.9.1", features = ["prost"], optional = true }

[features]
default = ["store-rocksdb", "grpc"]
grpc = ["tonic", "tonic-build"]
store-rocksdb = ["rocksdb"]
