[package]
name = "harness"
version = "0.1.0"
license = "Apache-2.0"
description = "A testing harness for oceanraft."
edition = "2021"

[dependencies]
oceanraft = { path = ".." }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
criterion = "0.3"
fxhash = "0.2.1"
lazy_static = "1"
protobuf = "2"
regex = "1"

opentelemetry = "0.18"
tracing-opentelemetry = "0.18" 
opentelemetry-jaeger = "0.17"
